--- a/files/css/form.css
+++ b/files/css/form.css
@@ -25,6 +25,7 @@ body{
             display: block;
             position: absolute;
             top: 0;
+            left: 550px;
             text-align: left;
             line-height: 2rem;
             width: 100ch;
@@ -43,54 +44,125 @@ body{
         form{
             grid-area: form;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 500px;
+            /* justify-content: center; */
+            /* align-items: center; */
+            height: 400px;
             width: 100%;
-            position: relative;
+            position: absolute;
             box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.403);
+            
+            input{
+                border: 1px solid rgba(0, 0, 0, 0.246);
+                border-radius: 5px;
+                padding: 5px;
+            }
+            input:focus{
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.332);
+                /* border: none; */
+
+            }
             
             h2{
                 font-size: 3rem;
-                display: flex;
                 position: absolute;
                 top: 0;
-                left: 50%;
-                translate: -50% 0%;
+                padding: 0 50px;
             }
             
             .form-left{
-                display: block;
-                height: 100px;
-                padding: 100px;
-                
+                display: flex;
+                flex-direction: column;
+                justify-content: end;
+                /* height: 100px; */
+                padding: 50px 50px;
+
                 label{
                     display: block;
-                    background-color: blue;
+                    padding: 10px 0px;
                 }
+                input{
+                    width: 300px;
+                    height: 25px;
+                }
+                input[type="password"]:invalid{
+                    
+                    appearance: red;
+                    border: 1px solid red;
+                    border-radius: 2px;
+                    
+
+                }
+                .pw-text{
+                    position: absolute;
+                    bottom: 100px;
+                    font-size: .7rem;
+                    color: red;
+                    display: none;
+                }
+                
+
             }
             .form-right{
                 padding: 100px;
-                display: block;
-                height: 100px;
+                display: flex;
+                flex-direction: column;
+                justify-content: end;
+                /* height: 100px; */
+                padding: 50px 100px;
                 
                 label{
                     display: block;
+                    padding: 10px 0;
+                }
+                input{
+                    width: 300px;
+                    height: 25px;
+                }
+                input[type="password"]:invalid{
+                    
+                    appearance: red;
+                    border: 1px solid red;
+                    border-radius: 2px;
+                    
+
+                }
+                input[type="number"]{
+
+
                 }
                 
             }
             
         }
         .submit_container{
-            grid-area: form;
+            /* grid-area: form; */
             display: block;
-            
-            
+            position: absolute;
+            bottom: 130px;
+            left: 500px;
+            z-index: 2;
             padding: 0px 50px;
             
             button{
                 width: 200px;
                 height: 50px;
+                background-color: steelblue;
+                border: none;
+                color: white;
+                font-size: 1rem;
+                border-radius: 5px;
+                box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.403);
+
+            }
+
+            a{
+                text-decoration: none;
+                font-weight: 500;
+                color: steelblue;
+            }
+            p{
+                position: relative;
+                line-height: 2rem;
             }
             
         }
